test/corpus/logbook.txt
==================
Empty LOGBOOK drawer
==================
* Task
:LOGBOOK:
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)))))

==================
LOGBOOK with closed CLOCK entry
==================
* Task
:LOGBOOK:
CLOCK: [2026-04-25 Sat 09:00]--[2026-04-25 Sat 10:00] =>  1:00
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp)
          (clock_timestamp)
          (clock_duration))))))

==================
LOGBOOK with active CLOCK entry
==================
* Task
:LOGBOOK:
CLOCK: [2026-04-26 Sun 14:30]
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp))))))

==================
LOGBOOK with multiple CLOCK entries
==================
* Task
:LOGBOOK:
CLOCK: [2026-04-25 Sat 09:00]--[2026-04-25 Sat 10:00] =>  1:00
CLOCK: [2026-04-26 Sun 14:30]--[2026-04-26 Sun 15:45] =>  1:15
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp)
          (clock_timestamp)
          (clock_duration))
        (clock
          (clock_timestamp)
          (clock_timestamp)
          (clock_duration))))))

==================
PROPERTIES followed by LOGBOOK
==================
* Task
:PROPERTIES:
:ID: alpha
:END:
:LOGBOOK:
CLOCK: [2026-04-26 Sun 14:30]
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (property_drawer
        (node_property
          (property_name)
          (property_value)))
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp))))))

==================
LOGBOOK then body paragraph
==================
* Task
:LOGBOOK:
CLOCK: [2026-04-26 Sun 14:30]
:END:
body line

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp)))
      (paragraph))))

==================
Stray :END: with no open drawer falls through to body
==================
* Task
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (paragraph))))

==================
Unknown drawer name falls through to body
==================
* Task
:RESULTS:
some content
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (paragraph)))))
