test/corpus/planning_and_clock.txt
==================
Planning: SCHEDULED single line
==================
* H
SCHEDULED: <2026-04-25 Sat>

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (planning
      (planning_line
        (planning_entry
          (planning_keyword)
          (planning_timestamp))))))

==================
Planning: combined SCHEDULED + DEADLINE on one line
==================
* H
  SCHEDULED: <2026-04-25 Sat> DEADLINE: <2026-04-30 Thu>

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (planning
      (planning_line
        (planning_entry
          (planning_keyword)
          (planning_timestamp))
        (planning_entry
          (planning_keyword)
          (planning_timestamp))))))

==================
Planning: across three lines
==================
* H
  SCHEDULED: <2026-04-25 Sat>
  DEADLINE: <2026-04-30 Thu>
  CLOSED: [2026-04-29 Wed]

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (planning
      (planning_line
        (planning_entry
          (planning_keyword)
          (planning_timestamp)))
      (planning_line
        (planning_entry
          (planning_keyword)
          (planning_timestamp)))
      (planning_line
        (planning_entry
          (planning_keyword)
          (planning_timestamp))))))

==================
Clock: closed with duration
==================
* H
:LOGBOOK:
CLOCK: [2026-04-25 Sat 09:00]--[2026-04-25 Sat 10:30] => 1:30
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp)
          (clock_timestamp)
          (clock_duration))))))

==================
Clock: running (no end)
==================
* H
:LOGBOOK:
CLOCK: [2026-04-26 Sun 14:00]
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp))))))

==================
Clock: closed without explicit duration
==================
* H
:LOGBOOK:
CLOCK: [2026-04-26 Sun 14:00]--[2026-04-26 Sun 15:00]
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (clock
          (clock_timestamp)
          (clock_timestamp))))))
