test/corpus/properties.txt
==================
Lowercase :properties: drawer (Emacs case-insensitive)
==================
* Task
:properties:
:custom_id: abc
:end:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value)))))

==================
Mixed-case :Properties: drawer with lowercase :End:
==================
* Task
:Properties:
:Id: 42
:End:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value)))))

==================
Empty property drawer
==================
* Task
:PROPERTIES:
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer)))

==================
Single property
==================
* Task
:PROPERTIES:
:ID: abc-123
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value)))))

==================
Multiple properties with padding
==================
* Task
:PROPERTIES:
:ID:       abc-123
:CATEGORY: work
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value))
      (node_property
        (property_name)
        (property_value)))))

==================
Planning before property drawer
==================
* TODO Task
SCHEDULED: <2026-04-25 Sat>
:PROPERTIES:
:CUSTOM_ID: my-task
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (todo)
      (title))
    (planning
      (planning_line
        (planning_entry
          (planning_keyword)
          (planning_timestamp))))
    (property_drawer
      (node_property
        (property_name)
        (property_value)))))

==================
Drawer followed by paragraph body
==================
* Task
:PROPERTIES:
:ID: abc
:END:
Body paragraph.

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value)))
    (section
      (paragraph))))

==================
Node property with no space before the value
==================
* H
:PROPERTIES:
:ID:abc
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value)))))

==================
Property drawer with a non-property line degrades to a plain drawer
==================
* H
:PROPERTIES:
ID: abc
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (paragraph)))))

==================
Property drawer with a bullet-like line degrades to a plain drawer
==================
* H
:PROPERTIES:
+ID: x
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (paragraph)))))

==================
Inlinetask property drawer with a colonless line degrades to a plain drawer
==================
* Heading
*************** Inlinetask
:PROPERTIES:
:ID abc
:END:
*************** END

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (inlinetask
        (inlinetask_line
          (stars)
          (title))
        (drawer
          (drawer_name)
          (paragraph))))))
